corpus/c/macro_include/case-03/snapshots/gcc15/render.verbose.txt
error: error surfaced through macro/include context
--> src/main.c:3:25
help: inspect the user-owned macro invocation or include edge that reaches the failing line
why: 'missing_symbol' undeclared (first use in this function)
| src/main.c:3:25
| int main(void) { return FETCH_VALUE(); }
|                         ^
through macro expansion:
  - src/main.c:3:25 in expansion of macro 'FETCH_VALUE'
from include chain:
  - In file included from src/wrapper.h:1
debug: rule_id=rule.family.macro_include.structured_or_message
debug: matched_conditions=context=macro_expansion, context=include
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output